--- a/page1.html
+++ b/page1.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -23,7 +24,23 @@
   
 </head>
 <body>
-  <link rel="stylesheet" href="style.less" class="cid-rhj87k7jjU" id="menu1-8" data-rv-view="64"><section class="menu cid-rhj87k7jjU" once="menu" id="menu1-8">
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135262665-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-135262665-1');
+</script>
+
+
+<!-- /Google Analytics -->
+
+
+  <link rel="stylesheet" href="style.less" class="cid-rhj87k7jjU" id="menu1-8" data-rv-view="46"><section class="menu cid-rhj87k7jjU" once="menu" id="menu1-8">
 
     
 
@@ -56,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="cid-riCKPwRS88" id="image4-b">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="cid-riCKPwRS88" id="image4-b">
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
     <!-- End block parameters -->
@@ -108,14 +125,17 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up")></i></a></div>
     <input name="animation" type="hidden">
+  <input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
